Replace Paths.get() with Path.of()
The class "Paths" is documented as deprecated now,
and the replacement is easier to find, shorter, and needs less imports.

We also need a new version of SoSy-Lab Java Common
such that "Path.of" is filtered from defaults in doc/ConfigurationOptions.txt.

Changes automatically created with Refaster.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@37543 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c